--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,7 @@
       }
     </style>
 
-    <script src=".actionjs"></script>
+    <script src="build/popup-bundle.js"></script>
   </head>
   <body>
     <div id="status"></div>
